test/valid/56269_parentheses/parentheses.agu
-- Author: 56269, Frederico Prazeres

let main(_) : Unit -> Unit =
  print((1 + 2) * 3)