test/invalid-semantic/56269_wrong_assignment/wrong_assignment.agu
-- Author: 56269, Frederico Prazeres

-- Semantic Error: a is an Integer

let wrongAssignment (n) : Int -> Int =
  let a : Int = "aaaa";
  a